connecting controllers to views

--- a/public/css/shop-main.css
+++ b/public/css/shop-main.css
@@ -1,7 +1,28 @@
+@font-face {
+    font-family: 'LatoThin';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Lato Thin'), local('LatoThin'), url('../fonts/Lato-Thin.woff');
+}
+@font-face {
+    font-family: 'LatoLatinRegular';
+    font-style: normal;
+    font-weight: 400;
+    src: local('LatoLatin Regular'), local('LatoLatinRegular'), url('../fonts/LatoLatin-Regular.woff');
+}
 body{
     background-color: #E0E0E0;
+    font-family:  LatoLatinRegular, sans-serif;
 }
 .navbar.navbar-inverse.navbar-fixed-top{
     background-color: #ffffff;
     border-bottom-color: #E0E0E0;
+}
+hr {
+    border-color: #E0E0E0;
+}
+.side-panel{
+    background-color: #ffffff;
+    border-radius: 4px;
+
 }
